colocando classes no arquivo comofunciona.html, adicionando nova imagem, criando novo arquivo comofunciona.css

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Estilização Primeiro Arquivo - Index.html */
+/* Estilização Primeiro Arquivo - index.html */
 * {
   background-color: #4CCD99;
 }
