--- a/estilos/beneficios.css
+++ b/estilos/beneficios.css
@@ -1,6 +1,6 @@
 /* Estilizando o Terceiro Arquivo - beneficios.css */
 
-* {
+body {
     background-color: #4CCD99;
 }
 
@@ -33,19 +33,20 @@ nav ul {
 }
 
 nav ul li {
-    margin-right: 110px;
+    margin-right: 100px;
 }
 
 nav ul li a {
     color: #FFFFFF;
     text-decoration: none;
+    font-size: 20px;
 }
 
 h1 {
     clear: both;
     color: #000000;
     text-align: center;
-    font-size: 30px;
+    font-size: 40px;
 }
 
 .paragrafo-imagem {
@@ -57,7 +58,7 @@ h1 {
 
 .paragrafo-imagem p {
     color: #000000;
-    font-size: 25px;
+    font-size: 30px;
 }
 
 .imagem-tomada,
@@ -67,7 +68,7 @@ h1 {
     float: left;
     width: 200px;
     height: auto;
-    margin-right: 20px;
+    margin-right: 30px;
 }
 
 .footer {
