--- a/estilos/como_funciona.css
+++ b/estilos/como_funciona.css
@@ -1,6 +1,6 @@
 /* Estizando o Segundo Arquivo - como_funciona.css */
 
-* {
+body {
     background-color: #4CCD99;
 }
 
@@ -36,12 +36,13 @@ nav ul {
 }
 
 nav ul li {
-    margin-right: 110px;
+    margin-right: 100px;
 }
 
 nav ul li a {
     color: #FFFFFF;
     text-decoration: none;
+    font-size: 20px;
 }
 
 .primeiro-paragrafo {
@@ -52,7 +53,7 @@ nav ul li a {
 }
 
 .primeiro-paragrafo p {
-    font-size: 25px;
+    font-size: 40px;
 }
 
 .primeiro-paragrafo span {
@@ -66,7 +67,7 @@ nav ul li a {
 }
 
 .imagem img {
-    width: 650px;
+    width: 800px;
 }
 
 
@@ -77,7 +78,7 @@ nav ul li a {
 }
 
 .ultimo-paragrafo p {
-    font-size: 20px;
+    font-size: 30px;
 }
 
 .footer {
