Modificando os comentarios dos arquivos, comofunciona.css, beneficios.css, cadastre-se.css e blog.css

--- a/estilos/blog.css
+++ b/estilos/blog.css
@@ -1,4 +1,4 @@
-/* Estilizando o Quinto Arquivo - blog.css */
+/* Estilização Quinto Arquivo - blog.html */
 
 body {
     background-color: #FFFFFF;
