--- a/estilos/cadastre-se.css
+++ b/estilos/cadastre-se.css
@@ -1,4 +1,4 @@
-/* Estilizando o Quarto Arquivo - cadastre-se.css */
+/* Estilização Quarto Arquivo - cadastre-se.html */
 
 body {
     background-color: #4CCD99;
