--- a/estilos/como_funciona.css
+++ b/estilos/como_funciona.css
@@ -1,4 +1,4 @@
-/* Estizando o Segundo Arquivo - como_funciona.css */
+/* Estização Segundo Arquivo - como_funciona.html */
 
 body {
     background-color: #4CCD99;
