--- a/estilos/beneficios.css
+++ b/estilos/beneficios.css
@@ -1,4 +1,4 @@
-/* Estilizando o Terceiro Arquivo - beneficios.css */
+/* Estilização Terceiro Arquivo - beneficios.html */
 
 body {
     background-color: #4CCD99;
