--- a/estilos/blog.css
+++ b/estilos/blog.css
@@ -133,6 +133,62 @@ nav ul li a {
     text-align: left;
 }
 
+#comentarios {
+    width: 100%;
+    max-width: 800px;
+    margin: 30px auto;
+    margin-top: 200px;
+  }
+  
+  #comentarios h2 {
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 30px;
+  }
+  
+  #comentarios form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  
+  #comentarios label {
+    font-weight: bold;
+    margin-bottom: 5px;
+    font-size: 20px;
+  }
+  
+  #comentarios input[type="text"],
+  #comentarios input[type="email"] {
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 3px solid #ccc;
+    border-radius: 8px;
+  }
+  
+  #comentarios textarea {
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 3px solid #ccc;
+    border-radius: 8px;
+    resize: vertical;
+  }
+  
+  #comentarios input[type="submit"] {
+    background-color: #007BFF;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    font-size: 20px;
+  }
+  
+  #comentarios input[type="submit"]:hover {
+    background-color: #0056b3;
+  }
+
 .footer {
     clear: both;
     margin-top: 100px;
