--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,10 +1,14 @@
 /* Estilização Primeiro Arquivo - index.html */
 body {
   background-color: #4CCD99;
+  margin: 0;
 }
 
 .header {
   padding: 20px;
+  background-color: #51AFF7;
+  width: 100%;
+  height: 100px;
 }
 
 .header .container {
@@ -61,6 +65,10 @@ body {
 .footer {
   clear: both;
   text-align: center;
+  background-color: #51AFF7;
+  width: 100%;
+  height: 50px;
+  padding: 20px;
 }
 
 .footer p {
