--- a/estilos/como_funciona.css
+++ b/estilos/como_funciona.css
@@ -1,10 +1,14 @@
 /* Estilização Segundo Arquivo - como_funciona.html */
 body {
-    background-color: #4CCD99;
+    background-color: #51AFF7;
+    margin: 0;
   }
   
   .header {
     padding: 20px;
+    background-color: #4CCD99;
+    width: 100%;
+    height: 200px;
   }
   
   .header .container {
@@ -78,6 +82,10 @@ body {
   .footer {
     clear: both;
     text-align: center;
+    background-color: #4CCD99;
+    width: 100%;
+    height: 50px;
+    padding: 20px;
   }
   
   .footer p {
