--- a/estilos/style.css
+++ b/estilos/style.css
@@ -43,12 +43,14 @@ body {
   font-size: 40px;
   text-align: left;
   margin-bottom: 50px;
+  margin-left: 30px;
 }
 
 .titulo {
   color: #FFFFFF;
   font-size: 50px;
   text-align: left;
+  margin-left: 30px;
 }
 
 .imagem-solar {
