alterando o menu da pagina blog no arquivo blog.css

--- a/estilos/blog.css
+++ b/estilos/blog.css
@@ -12,10 +12,10 @@ body {
     width: 100%;
 }
 
-.header .container {
+/* .header .container {
     max-width: 1200px;
     margin: 0 auto;
-}
+} */
 
 .logo-container {
     float: left;
@@ -27,24 +27,24 @@ body {
 }
 
 nav {
-    float: left;
-    margin: 20px 10px;
+    float: right;
+    margin: 70px 20px;
 }
 
 nav ul {
     list-style: none;
     display: flex;
-    justify-content: space-around;
+    /* justify-content: space-between; */
 }
 
 nav ul li {
-    margin-right: 100px;
+    margin-right: 140px;
 }
 
 nav ul li a {
     color: #FFFFFF;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 .titulo-container {
