--- a/estilos/cadastre-se.css
+++ b/estilos/cadastre-se.css
@@ -128,6 +128,7 @@ input[type="radio"] {
     height: 40px;
     border: 2px solid #000000;
     border-radius: 5px;
+    font-size: 18px;
 }
 
 .atencao {
@@ -169,6 +170,13 @@ input[type="radio"] {
 
 .footer p a {
     text-decoration: none;
+}
+
+/* Para a validação do formulário */
+.invalido {
+    border-color: red;
+    border-width: 3px;
+    background-color: lightgray;
 }
 
 /* Adicionando Regras de mídia para telas menores que 768px */
