Alterando a cor da barra de navegação e footer da pagina inicio, e o body das paginas comofunciona, beneficios e cadastre-se, usando a cor #52CCD8

--- a/estilos/beneficios.css
+++ b/estilos/beneficios.css
@@ -1,6 +1,6 @@
 /* Estilização Terceiro Arquivo - beneficios.html */
 body {
-    background-color: #51AFF7;
+    background-color: #52CCD8;
     margin: 0;
   }
   
