--- a/estilos/cadastre-se.css
+++ b/estilos/cadastre-se.css
@@ -1,7 +1,7 @@
 /* Estilização Quarto Arquivo - cadastre-se.html */
 
 body {
-    background-color: #51AFF7;
+    background-color: #52CCD8;
     margin: 0;
 }
 
