--- a/estilos/como_funciona.css
+++ b/estilos/como_funciona.css
@@ -1,6 +1,6 @@
 /* Estilização Segundo Arquivo - como_funciona.html */
 body {
-    background-color: #51AFF7;
+    background-color: #52CCD8;
     margin: 0;
   }
   
