--- a/estilos/style.css
+++ b/estilos/style.css
@@ -6,7 +6,7 @@ body {
 
 .header {
   padding: 20px;
-  background-color: #51AFF7;
+  background-color: #52CCD8;
   width: 100%;
   height: 200px;
 }
@@ -68,7 +68,7 @@ body {
 .footer {
   clear: both;
   text-align: center;
-  background-color: #51AFF7;
+  background-color: #52CCD8;
   width: 100%;
   height: 50px;
   padding: 20px;
